# hoongpt

./: .gitignore  Cargo.toml  README.md  analyze.py  analyze_results.py  eval.py  fibonacci-simple.hoon  fibonacci.hoon  fix_db.py  hoon-examples-complete.md  hoon-school-complete-37940.md  hoon-school-complete.md  hoongpt.py  hoongpt_v2.py  init_db.py  system-prompt-old.txt  system-prompt-small.txt  system-prompt.txt
questions/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
questions-ez/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
simple-prompts/: 1.json  1.txt  10.txt  2.json  2.txt  3.txt  4.json  4.txt  5.json  5.txt  6.txt  7.json  7.txt  8.txt  9.txt  toc.txt
src/: main.rs
